<?xml version="1.0" encoding="utf-8"?>
<MotionScene 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <Transition
        motion:constraintSetEnd="@+id/end"
        motion:constraintSetStart="@id/start"
        motion:duration="1000">
       <KeyFrameSet>
       </KeyFrameSet>
    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:layout_height="48dp"
            android:layout_width="399dp"
            android:id="@+id/login"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/signUp"
            motion:layout_constraintBottom_toTopOf="@+id/gSignIn" />
        <Constraint
            motion:layout_editor_absoluteY="171dp"
            android:layout_height="521dp"
            motion:layout_editor_absoluteX="0dp"
            android:layout_width="403dp"
            android:id="@+id/imageView5" />
        <Constraint
            android:layout_height="48dp"
            android:layout_width="399dp"
            android:id="@+id/signUp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/password"
            android:layout_marginTop="20dp" />
        <Constraint
            android:layout_height="83dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="100dp"
            android:id="@+id/gSignIn" />
        <Constraint
            android:layout_height="63dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintHorizontal_bias="1.0"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="404dp"
            motion:layout_constraintTop_toBottomOf="@+id/email"
            android:id="@+id/password" />
        <Constraint
            android:layout_height="63dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintHorizontal_bias="1.0"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="404dp"
            android:id="@+id/email"
            motion:layout_constraintVertical_bias="0.534" />
        <Constraint
            android:layout_height="340dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintHorizontal_bias="0.0"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="398dp"
            android:id="@+id/gifImageView2"
            motion:layout_constraintBottom_toTopOf="@+id/email"
            motion:layout_constraintVertical_bias="0.0" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
    </ConstraintSet>
</MotionScene>