<resources>
    <string name="app_name">The Vault</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_update">Email (optional)</string>
    <string name="prompt_password">Password</string>
    <string name="newPassword">Please enter your new password</string>
    <string name="newPasswordVerify">Verify your new password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">LOG IN</string>
    <string name="log_out">Log out</string>
    <string name="changeInfo">Change Info</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name_update">Display Name (optional)</string>
    <string name="sign_up">REGISTER</string>
    <string name="nameRequest">Please enter your display name.</string>
    <string name="pNameRequest">Who is in your picture?</string>
    <string name="phone">Phone Number (optional)</string>
    <string name="phone_req">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DisplayName"><u></u></string>
    <string name="Email"><u></u></string>
</resources>